--- a/src/config/envs/production.yaml
+++ b/src/config/envs/production.yaml
@@ -1,12 +1,16 @@
-env: production_graph
+env: production_discrete
 
 env_args:
   buffers:
-    incoming_buffer: True
+    # Buffer capacities
     buffer_10_20: 10
     buffer_20_30: 10
     buffer_30_40: 10
-    completed_buffer: True
+
+  n_process: 4
+  n_feature: 4
+  machine_name: "grinding"
+
   machines:
     m10_1:
       stage: 0
@@ -19,25 +23,69 @@ env_args:
       buffer_down: ["buffer_10_20"]
       MTTR_step: 50
       MTBF_step: 100
-    m10_1:
-      stage: 0
+    m20_1:
+      stage: 1
       p1: 0.9
       p2: 1.4
       p3: 0.5
       p4: 2.0
       p5: 0.01
-      buffer_up: ["incoming_buffer"]
-      buffer_down: ["buffer_10_20"]
+      buffer_up: ["buffer_10_20"]
+      buffer_down: ["buffer_20_30"]
+      MTTR_step: 50
+      MTBF_step: 100
+    m30_1:
+      stage: 2
+      p1: 0.9
+      p2: 1.4
+      p3: 0.5
+      p4: 2.0
+      p5: 0.01
+      buffer_up: ["buffer_20_30"]
+      buffer_down: ["buffer_30_40"]
+      MTTR_step: 50
+      MTBF_step: 100
+    m40_1:
+      stage: 3
+      p1: 0.9
+      p2: 1.4
+      p3: 0.5
+      p4: 2.0
+      p5: 0.01
+      buffer_up: ["buffer_30_40"]
+      buffer_down: ["completed_buffer"]
+      MTTR_step: 50
+      MTBF_step: 100
+    m40_2:
+      stage: 3
+      p1: 0.9
+      p2: 1.4
+      p3: 0.5
+      p4: 2.0
+      p5: 0.01
+      buffer_up: ["buffer_30_40"]
+      buffer_down: ["completed_buffer"]
       MTTR_step: 50
       MTBF_step: 100
 
+  sim_duration: 100000
+  q_star: 0.000004
+  yield_reward: 1
+  defect_reward: -0.1
+  actions:
+    v: [0.3, 0.4, 0.5]
+    w: [28, 30.5, 33]
+    a: [0.000012, 0.000015, 0.000018]
 
+
+  stepsize: 100
   continuing_episode: False
-  map_name: 26
-  obs_instead_of_state: False
+  episode_limit: 1000
+  # map_name: 26
+  obs_instead_of_state: True
   obs_last_action: True
-  obs_own_health: True
-  obs_all_health: False
+  # obs_own_health: True
+  # obs_all_health: False
   obs_all_cost: False
   obs_own_cost: True
   obs_timestep_number: False
@@ -49,7 +97,7 @@ env_args:
   state_own_cost: True
   state_profit: True
   state_timestep_number: False
-  seed: null
+  seed: 1234
   debug: False
 
 batch_size: 8
@@ -60,10 +108,9 @@ log_interval: 10000
 runner_log_interval: 10000
 learner_log_interval: 10000
 t_max: 2050000
-n_agents: 6
-adj: [[1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1]]
+n_agents: 5
+adj: [[1, 1, 0, 0, 0],
+      [1, 1, 1, 0, 0],
+      [0, 1, 1, 1, 1],
+      [0, 0, 1, 1, 0],
+      [0, 0, 1, 0, 1]]
