--- a/src/config/algs/trans_vdn_a2c.yaml
+++ b/src/config/algs/trans_vdn_a2c.yaml
@@ -1,23 +1,28 @@
 # --- COMA specific parameters ---
 
 action_selector: "multinomial"
+
+# epsilon greedy 
 epsilon_start: .5
 epsilon_finish: .01
 epsilon_anneal_time: 100000
+
 mask_before_softmax: False
 
 runner: "parallel"
 
+# Replay buffer
 buffer_size: 150
 batch_size_run: 8
 batch_size: 8
 
-env_args:
-  state_last_action: False # critic adds last action internally
+# env_args:
+#   state_last_action: False # critic adds last action internally
 
 # update the target network every {} training steps
 target_update_interval: 200
 
+# learning rate
 lr: 0.0005
 critic_lr: 0.0005
 td_lambda: 0.8
@@ -37,12 +42,15 @@ hypernet_embed: 64
 
 
 # agent
+residue: False
+num_blocks: 5
+n_head: 1
+
 mac: "ppo_mac"
 agent: "trans_ppo"
-adj: [[1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1],
-      [1, 1, 1, 1, 1, 1]]
+adj: [[1, 1, 0, 0, 0],
+      [1, 1, 1, 0, 0],
+      [0, 1, 1, 1, 1],
+      [0, 0, 1, 1, 0],
+      [0, 0, 1, 0, 1]]
 name: "trans_vmix_pg_a2c"
