--- a/src/config/envs/production_discrete.yaml
+++ b/src/config/envs/production_discrete.yaml
@@ -7,7 +7,7 @@ env_args:
     buffer_20_30: 10
     buffer_30_40: 10
 
-  n_process: 4
+  n_stage: 4
   n_feature: 4
   machine_name: "grinding"
 
@@ -18,58 +18,59 @@ env_args:
       p2: 1.4
       p3: 0.5
       p4: 2.0
-      p5: 0.0001
+      p5: 0.01
       buffer_up: ["incoming_buffer"]
       buffer_down: ["buffer_10_20"]
-      MTTR_step: 50
+      MTTR_step: 5
       MTBF_step: 100
     m20_1:
       stage: 1
-      p1: 0.9
-      p2: 1.4
+      p1: 0.85
+      p2: 1.35
       p3: 0.5
       p4: 2.0
-      p5: 0.0001
+      p5: 0.01
       buffer_up: ["buffer_10_20"]
       buffer_down: ["buffer_20_30"]
-      MTTR_step: 50
+      MTTR_step: 5
       MTBF_step: 100
     m30_1:
       stage: 2
       p1: 0.9
-      p2: 1.4
+      p2: 1.5
       p3: 0.5
       p4: 2.0
-      p5: 0.0001
+      p5: 0.005
       buffer_up: ["buffer_20_30"]
       buffer_down: ["buffer_30_40"]
-      MTTR_step: 50
+      MTTR_step: 5
       MTBF_step: 100
     m40_1:
       stage: 3
-      p1: 0.9
-      p2: 1.4
+      p1: 0.85
+      p2: 1.3
       p3: 0.5
       p4: 2.0
-      p5: 0.0001
+      p5: 0.03
       buffer_up: ["buffer_30_40"]
       buffer_down: ["completed_buffer"]
-      MTTR_step: 50
+      MTTR_step: 5
       MTBF_step: 100
     m40_2:
       stage: 3
-      p1: 0.9
-      p2: 1.4
+      p1: 0.85
+      p2: 1.3
       p3: 0.5
       p4: 2.0
-      p5: 0.0001
+      p5: 0.03
       buffer_up: ["buffer_30_40"]
       buffer_down: ["completed_buffer"]
-      MTTR_step: 50
+      MTTR_step: 5
       MTBF_step: 100
 
-  sim_duration: 100000
-  q_star: 0.00004
+  # sim_duration: 100000
+  p5_scale: 0.001
+  q_star: 0.000006
   yield_reward: 1
   defect_reward: -0.1
   actions:
@@ -77,21 +78,29 @@ env_args:
     w: [28.0, 30.5, 33.0]
     a: [0.000012, 0.000015, 0.000018]
 
+  obs_scale:
+    stage: 1
+    b_up: 0.1
+    b_down: 0.1
+    remaining_time: 0.25
+    product_feature: 100000
+    w: 1
 
-  stepsize: 10
+  stepsize: 0.01
   continuing_episode: False
   episode_limit: 1000
   # sim_duration: 1000000
   # map_name: 26
   obs_instead_of_state: True
   obs_last_action: True
+  obs_agent_id: True
   # obs_own_health: True
   # obs_all_health: False
   # obs_all_cost: False
   # obs_own_cost: True
   # obs_timestep_number: False
-  # reward_scale: False
-  # reward_scale_rate: 1
+  reward_scale: False
+  reward_scale_rate: 1
   # replay_dir: ""
   # replay_prefix: ""
   # state_last_action: False
