--- a/src/config/envs/production_rbe.yaml
+++ b/src/config/envs/production_rbe.yaml
@@ -11,8 +11,11 @@ env_args:
   n_feature: 4
   machine_name: "grinding_hmm"
 
+  use_tool_belief: False
+
   fixed_dress_schedule: False
   n_tool_state: 4
+
   pass_to_dress: 10
 
   machines:
@@ -22,19 +25,20 @@ env_args:
       p2: 1.4
       p3: 0.5
       p4: 2.0
-      p5: 0.01
+      p5: 0.00001
+      p5_scale: [1.0, 1.2, 1.4, 2.1]
       buffer_up: ["incoming_buffer"]
       buffer_down: ["buffer_10_20"]
-      tp: [[0.80, 0.15, 0.04, 0.01],
-           [0.00, 0.70, 0.26, 0.04],
+      tp: [[0.60, 0.27, 0.08, 0.05],
+           [0.00, 0.65, 0.26, 0.09],
            [0.00, 0.00, 0.70, 0.30],
            [0.00, 0.00, 0.00, 1.00]]
-      ep: [[0.80, 0.15, 0.04, 0.01],
+      ep: [[0.70, 0.17, 0.12, 0.01],
            [0.10, 0.70, 0.16, 0.04],
-           [0.08, 0.10, 0.70, 0.12],
-           [0.02, 0.03, 0.12, 0.83]]
+           [0.25, 0.10, 0.60, 0.05],
+           [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 1.2, 1.3, 1.7]
+      p6: [1.0, 0.99, 0.95, 0.92]
 
       time_to_dress: 3
 
@@ -45,19 +49,43 @@ env_args:
       p2: 1.35
       p3: 0.5
       p4: 2.0
-      p5: 0.01
+      p5: 0.00003
+      p5_scale: [1.0, 1.2, 1.4, 2.1]
       buffer_up: ["buffer_10_20"]
       buffer_down: ["buffer_20_30"]
-      tp: [[0.80, 0.15, 0.04, 0.01],
-           [0.00, 0.70, 0.26, 0.04],
+      tp: [[0.60, 0.27, 0.08, 0.05],
+           [0.00, 0.65, 0.26, 0.09],
            [0.00, 0.00, 0.70, 0.30],
            [0.00, 0.00, 0.00, 1.00]]
-      ep: [[0.80, 0.15, 0.04, 0.01],
+      ep: [[0.70, 0.17, 0.12, 0.01],
            [0.10, 0.70, 0.16, 0.04],
-           [0.08, 0.10, 0.70, 0.12],
-           [0.02, 0.03, 0.12, 0.83]]
+           [0.25, 0.10, 0.60, 0.05],
+           [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 1.2, 1.3, 1.7]
+      p6: [1.0, 0.99, 0.95, 0.92]
+
+      time_to_dress: 3
+
+    m20_2:
+      stage: 1
+      p1: 0.85
+      p2: 1.35
+      p3: 0.5
+      p4: 2.0
+      p5: 0.00004
+      p5_scale: [1.0, 1.2, 1.4, 2.1]
+      buffer_up: ["buffer_10_20"]
+      buffer_down: ["buffer_20_30"]
+      tp: [[0.60, 0.27, 0.08, 0.05],
+           [0.00, 0.65, 0.26, 0.09],
+           [0.00, 0.00, 0.70, 0.30],
+           [0.00, 0.00, 0.00, 1.00]]
+      ep: [[0.70, 0.17, 0.12, 0.01],
+           [0.10, 0.70, 0.16, 0.04],
+           [0.25, 0.10, 0.60, 0.05],
+           [0.22, 0.18, 0.05, 0.55]]
+
+      p6: [1.0, 0.99, 0.95, 0.92]
 
       time_to_dress: 3
 
@@ -67,19 +95,20 @@ env_args:
       p2: 1.5
       p3: 0.5
       p4: 2.0
-      p5: 0.005
+      p5: 0.00005
+      p5_scale: [1.0, 1.2, 1.4, 2.1]
       buffer_up: ["buffer_20_30"]
       buffer_down: ["buffer_30_40"]
-      tp: [[0.80, 0.15, 0.04, 0.01],
-           [0.00, 0.70, 0.26, 0.04],
+      tp: [[0.60, 0.27, 0.08, 0.05],
+           [0.00, 0.65, 0.26, 0.09],
            [0.00, 0.00, 0.70, 0.30],
            [0.00, 0.00, 0.00, 1.00]]
-      ep: [[0.80, 0.15, 0.04, 0.01],
+      ep: [[0.70, 0.17, 0.12, 0.01],
            [0.10, 0.70, 0.16, 0.04],
-           [0.08, 0.10, 0.70, 0.12],
-           [0.02, 0.03, 0.12, 0.83]]
+           [0.25, 0.10, 0.60, 0.05],
+           [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 1.2, 1.3, 1.7]
+      p6: [1.0, 0.99, 0.95, 0.92]
 
       time_to_dress: 3
 
@@ -90,19 +119,20 @@ env_args:
       p2: 1.3
       p3: 0.5
       p4: 2.0
-      p5: 0.03
+      p5: 0.00003
+      p5_scale: [1.0, 1.2, 1.4, 2.1]
       buffer_up: ["buffer_30_40"]
       buffer_down: ["completed_buffer"]
-      tp: [[0.80, 0.15, 0.04, 0.01],
-           [0.00, 0.70, 0.26, 0.04],
+      tp: [[0.60, 0.27, 0.08, 0.05],
+           [0.00, 0.65, 0.26, 0.09],
            [0.00, 0.00, 0.70, 0.30],
            [0.00, 0.00, 0.00, 1.00]]
-      ep: [[0.80, 0.15, 0.04, 0.01],
+      ep: [[0.70, 0.17, 0.12, 0.01],
            [0.10, 0.70, 0.16, 0.04],
-           [0.08, 0.10, 0.70, 0.12],
-           [0.02, 0.03, 0.12, 0.83]]
+           [0.25, 0.10, 0.60, 0.05],
+           [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 1.2, 1.3, 1.7]
+      p6: [1.0, 0.99, 0.95, 0.92]
 
       time_to_dress: 3
 
@@ -112,25 +142,26 @@ env_args:
       p2: 1.3
       p3: 0.5
       p4: 2.0
-      p5: 0.03
+      p5: 0.00003
+      p5_scale: [1.0, 1.2, 1.4, 2.1]
       buffer_up: ["buffer_30_40"]
       buffer_down: ["completed_buffer"]
-      tp: [[0.80, 0.15, 0.04, 0.01],
-           [0.00, 0.70, 0.26, 0.04],
+      tp: [[0.60, 0.27, 0.08, 0.05],
+           [0.00, 0.65, 0.26, 0.09],
            [0.00, 0.00, 0.70, 0.30],
            [0.00, 0.00, 0.00, 1.00]]
-      ep: [[0.80, 0.15, 0.04, 0.01],
+      ep: [[0.70, 0.17, 0.12, 0.01],
            [0.10, 0.70, 0.16, 0.04],
-           [0.08, 0.10, 0.70, 0.12],
-           [0.02, 0.03, 0.12, 0.83]]
+           [0.25, 0.10, 0.60, 0.05],
+           [0.22, 0.18, 0.05, 0.55]]
+
       p6: [1.0, 1.2, 1.3, 1.7]
 
       time_to_dress: 3
 
 
   sim_duration: 600
-  p5_scale: 0.001
-  q_star: 0.000008
+  q_star: 0.000006
   yield_reward: 1
   defect_reward: -1
   actions:
@@ -182,16 +213,22 @@ log_interval: 10000
 runner_log_interval: 10000
 learner_log_interval: 10000
 t_max: 10000000  # total training episodes
-n_agents: 5
+n_agents: 6
 # adj: [[1, 1, 0, 0, 0],
 #       [1, 1, 1, 0, 0],
 #       [0, 1, 1, 1, 1],
 #       [0, 0, 1, 1, 0],
 #       [0, 0, 1, 0, 1]]
-adj: [[1, 1, 0, 0, 0],
-      [1, 1, 1, 0, 0],
-      [0, 1, 1, 1, 1],
-      [0, 0, 1, 1, 0],
-      [0, 0, 1, 0, 1]]
+# adj: [[1, 1, 0, 0, 0],
+#       [1, 1, 1, 0, 0],
+#       [0, 1, 1, 1, 1],
+#       [0, 0, 1, 1, 0],
+#       [0, 0, 1, 0, 1]]
+adj: [[1, 1, 0, 0, 0, 0],
+      [1, 1, 1, 1, 0, 0],
+      [0, 1, 1, 0, 0, 0],
+      [0, 1, 0, 1, 1, 1],
+      [0, 0, 0, 1, 1, 0],
+      [0, 0, 0, 1, 0, 1]]
 
-num_blocks: 5
+num_blocks: 6
