--- a/src/config/envs/production_rbe.yaml
+++ b/src/config/envs/production_rbe.yaml
@@ -9,9 +9,9 @@ env_args:
 
   n_stage: 4
   n_feature: 4
-  machine_name: "grinding_hmm"
+  machine_name: "grinding_rbe"
 
-  use_tool_belief: False
+  use_tool_belief: True
 
   fixed_dress_schedule: False
   n_tool_state: 4
@@ -38,7 +38,7 @@ env_args:
            [0.25, 0.10, 0.60, 0.05],
            [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 0.99, 0.95, 0.92]
+      p6: [1.0, 0.99, 0.98, 0.96]
 
       time_to_dress: 3
 
@@ -62,7 +62,7 @@ env_args:
            [0.25, 0.10, 0.60, 0.05],
            [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 0.99, 0.95, 0.92]
+      p6: [1.0, 0.99, 0.98, 0.96]
 
       time_to_dress: 3
 
@@ -85,7 +85,7 @@ env_args:
            [0.25, 0.10, 0.60, 0.05],
            [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 0.99, 0.95, 0.92]
+      p6: [1.0, 0.99, 0.98, 0.96]
 
       time_to_dress: 3
 
@@ -108,7 +108,7 @@ env_args:
            [0.25, 0.10, 0.60, 0.05],
            [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 0.99, 0.95, 0.92]
+      p6: [1.0, 0.99, 0.98, 0.96]
 
       time_to_dress: 3
 
@@ -132,7 +132,7 @@ env_args:
            [0.25, 0.10, 0.60, 0.05],
            [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 0.99, 0.95, 0.92]
+      p6: [1.0, 0.99, 0.98, 0.96]
 
       time_to_dress: 3
 
@@ -155,7 +155,7 @@ env_args:
            [0.25, 0.10, 0.60, 0.05],
            [0.22, 0.18, 0.05, 0.55]]
 
-      p6: [1.0, 1.2, 1.3, 1.7]
+      p6: [1.0, 0.99, 0.98, 0.96]
 
       time_to_dress: 3
 
